# clinic-rag-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _case-study.html  _thumbnail.html  case-study.md  fly.toml  pyproject.toml  requirements-runtime.txt
api/: server.py
scripts/: 01_ingest.py  02_smoke_test_retrieval.py  03_agent_test.py  migrate_to_remote_db.py  parse_quality_test.py
src/clinic_rag/: agent.py  chunking.py  config.py  db.py  embedding.py  retrieval.py  stream.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AnswerView.tsx  ChatComposer.tsx  Header.tsx  SourceView.tsx  TraceGraph.tsx
web/src/lib/: api.ts  types.ts  useVapi.ts
