[project]
name = "clinic-rag-agent"
version = "0.1.0"
description = "HIPAA-aware clinical guideline RAG agent (LangGraph + LangChain + pgvector)"
authors = [{ name = "Waseem Iftikhar", email = "waseemiftikhar1014@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "docling>=2.93.0",
  "anthropic>=0.40.0",
  "voyageai>=0.3.0",
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-postgres>=0.0.12",
  "langgraph>=0.2.50",
  "cohere>=5.10.0",
  "psycopg[binary,pool]>=3.2.0",
  "pgvector>=0.3.0",
  "rank-bm25>=0.2.2",
  "python-dotenv>=1.0.1",
  "tiktoken>=0.8.0",
  "pydantic>=2.9.0",
]
